// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogSearchAPI Snapshots Returns consistent filter results 1`] = `
Array [
  "@aws-cdk/aws-backup",
  "@aws-cdk/aws-lambda-destinations",
  "@aws-cdk/aws-route53-patterns",
  "@aws-cdk/aws-ecs",
  "@aws-cdk/aws-apigatewayv2-authorizers",
  "@aws-cdk/aws-globalaccelerator-endpoints",
  "@aws-cdk/aws-dynamodb",
  "@aws-cdk/aws-ses",
  "@aws-cdk/aws-lambda-nodejs",
  "@aws-cdk/aws-kinesisfirehose",
  "@aws-cdk/aws-glue",
  "@aws-cdk/aws-servicecatalog",
  "@aws-cdk/aws-kinesis",
  "@aws-cdk/aws-synthetics",
  "@aws-cdk/aws-sqs",
  "@aws-cdk/aws-ecr-assets",
  "@aws-cdk/aws-ssm",
  "@aws-cdk/aws-ecr",
  "@aws-cdk/aws-workspaces",
  "@aws-cdk/aws-timestream",
  "@aws-cdk/aws-sso",
  "@aws-cdk/aws-securityhub",
  "@aws-cdk/aws-s3outposts",
  "@aws-cdk/aws-s3objectlambda",
  "@aws-cdk/aws-qldb",
  "@aws-cdk/aws-mediastore",
  "@aws-cdk/aws-mediapackage",
  "@aws-cdk/aws-medialive",
  "@aws-cdk/aws-mediaconnect",
  "@aws-cdk/aws-managedblockchain",
  "@aws-cdk/aws-location",
  "@aws-cdk/aws-iotwireless",
  "@aws-cdk/aws-iotcoredeviceadvisor",
  "@aws-cdk/aws-events",
  "@aws-cdk/aws-elasticbeanstalk",
  "@aws-cdk/aws-dms",
  "@aws-cdk/aws-dax",
  "@aws-cdk/aws-datasync",
  "@aws-cdk/aws-customerprofiles",
  "@aws-cdk/aws-codeguruprofiler",
  "@aws-cdk/aws-codeartifact",
  "@aws-cdk/aws-cloudwatch",
  "@aws-cdk/aws-ce",
  "@aws-cdk/aws-autoscalingplans",
  "@aws-cdk/aws-auditmanager",
  "@aws-cdk/aws-appstream",
  "@aws-cdk/aws-applicationinsights",
  "@aws-cdk/assets",
  "@aws-cdk/cx-api",
  "cdk-sns-notify",
  "cdk-tweet-queue",
  "cdk-alps-graph-ql",
  "gradle_s3_uploader",
  "cdk-mediapackage-custom",
  "cdk-noob",
  "cdk8s-aws-alb-ingress-controller",
  "cdk8s-plus",
  "cdk-iam-constants",
  "monocdk-experiment",
  "@rayou/cdk-url-shortener",
  "cdk-serverless-api",
  "cdk-stepfunctions-patterns",
  "aws-cdk-dynamodb-seeder",
  "@cdk-7layer-constructs/kinesis-firehose-transformer",
  "cdk-elasticache-monitor",
  "@taimos/cdk-construct-alexa-skill",
  "cdk-time-bomb",
  "cdk-athena-workgroup",
  "cdk-watchful-edge",
  "sqs-redrive",
  "cdk-github-import",
  "@philcali-cdk/static-website",
  "aws-lambda-golang",
  "cdk-sqs-monitored",
  "@moralesl/billing-alert",
  "sqs-redrive-construct",
  "cdk-secrets",
  "@terrastack/core",
  "cicd-spa-website",
  "aws-cdk-featureflags",
  "nodejsfunction-plus",
  "secure-bucket",
  "cdk-cicd",
  "@taimos/cdk-construct-gitlab-variable",
  "cdk-iam-generator",
  "@taimos/cdk-construct-hosting",
  "cdk-constants",
  "@aws-cdk/cdk",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent query results 1`] = `
Array [
  "aws-lambda-golang",
  "@aws-cdk/aws-lambda-nodejs",
  "@aws-cdk/aws-lambda-destinations",
  "nodejsfunction-plus",
  "cdk-elasticache-monitor",
  "aws-cdk-featureflags",
  "@aws-cdk/aws-ssm",
  "@aws-cdk/aws-appstream",
  "@aws-cdk/aws-mediastore",
  "@aws-cdk/aws-ecs",
  "@aws-cdk/aws-ecr",
  "@aws-cdk/aws-backup",
  "@aws-cdk/aws-mediapackage",
  "@aws-cdk/aws-dms",
  "@aws-cdk/aws-ce",
  "@aws-cdk/aws-workspaces",
  "@aws-cdk/aws-synthetics",
  "@aws-cdk/aws-s3objectlambda",
  "@aws-cdk/aws-cloudwatch",
  "@aws-cdk/aws-location",
  "@aws-cdk/aws-securityhub",
  "@aws-cdk/aws-timestream",
  "@aws-cdk/aws-sqs",
  "@aws-cdk/aws-datasync",
  "@aws-cdk/aws-codeguruprofiler",
  "@aws-cdk/aws-sso",
  "@aws-cdk/aws-codeartifact",
  "@aws-cdk/aws-elasticbeanstalk",
  "@aws-cdk/aws-applicationinsights",
  "@aws-cdk/aws-servicecatalog",
  "@aws-cdk/aws-medialive",
  "@aws-cdk/aws-dynamodb",
  "@aws-cdk/aws-s3outposts",
  "@aws-cdk/aws-dax",
  "@aws-cdk/aws-kinesisfirehose",
  "@aws-cdk/aws-qldb",
  "@aws-cdk/aws-customerprofiles",
  "@aws-cdk/aws-mediaconnect",
  "@aws-cdk/aws-iotwireless",
  "@aws-cdk/aws-events",
  "@aws-cdk/aws-kinesis",
  "@aws-cdk/aws-iotcoredeviceadvisor",
  "@aws-cdk/aws-auditmanager",
  "@aws-cdk/aws-ses",
  "@aws-cdk/aws-autoscalingplans",
  "@aws-cdk/aws-managedblockchain",
  "@aws-cdk/aws-glue",
  "cdk-constants",
  "@aws-cdk/aws-route53-patterns",
  "aws-cdk-image-resize",
  "@pgarbe/cdk-bitbucket-server",
  "cdk8s-aws-alb-ingress-controller",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent sort results 1`] = `
Array [
  "@aws-cdk/assets",
  "@aws-cdk/aws-apigatewayv2-authorizers",
  "@aws-cdk/aws-applicationinsights",
  "@aws-cdk/aws-appstream",
  "@aws-cdk/aws-auditmanager",
  "@aws-cdk/aws-autoscalingplans",
  "@aws-cdk/aws-backup",
  "@aws-cdk/aws-ce",
  "@aws-cdk/aws-cloudwatch",
  "@aws-cdk/aws-codeartifact",
  "@aws-cdk/aws-codeguruprofiler",
  "@aws-cdk/aws-customerprofiles",
  "@aws-cdk/aws-datasync",
  "@aws-cdk/aws-dax",
  "@aws-cdk/aws-dms",
  "@aws-cdk/aws-dynamodb",
  "@aws-cdk/aws-ecr",
  "@aws-cdk/aws-ecr-assets",
  "@aws-cdk/aws-ecs",
  "@aws-cdk/aws-elasticbeanstalk",
  "@aws-cdk/aws-events",
  "@aws-cdk/aws-globalaccelerator-endpoints",
  "@aws-cdk/aws-glue",
  "@aws-cdk/aws-iotcoredeviceadvisor",
  "@aws-cdk/aws-iotwireless",
  "@aws-cdk/aws-kinesis",
  "@aws-cdk/aws-kinesisfirehose",
  "@aws-cdk/aws-lambda-destinations",
  "@aws-cdk/aws-lambda-nodejs",
  "@aws-cdk/aws-location",
  "@aws-cdk/aws-managedblockchain",
  "@aws-cdk/aws-mediaconnect",
  "@aws-cdk/aws-medialive",
  "@aws-cdk/aws-mediapackage",
  "@aws-cdk/aws-mediastore",
  "@aws-cdk/aws-qldb",
  "@aws-cdk/aws-route53-patterns",
  "@aws-cdk/aws-s3objectlambda",
  "@aws-cdk/aws-s3outposts",
  "@aws-cdk/aws-securityhub",
  "@aws-cdk/aws-servicecatalog",
  "@aws-cdk/aws-ses",
  "@aws-cdk/aws-sqs",
  "@aws-cdk/aws-ssm",
  "@aws-cdk/aws-sso",
  "@aws-cdk/aws-synthetics",
  "@aws-cdk/aws-timestream",
  "@aws-cdk/aws-workspaces",
  "@aws-cdk/cdk",
  "@aws-cdk/cx-api",
  "@cdk-7layer-constructs/kinesis-firehose-transformer",
  "@moralesl/billing-alert",
  "@pgarbe/cdk-bitbucket-server",
  "@philcali-cdk/static-website",
  "@rayou/cdk-url-shortener",
  "@taimos/cdk-construct-alexa-skill",
  "@taimos/cdk-construct-gitlab-variable",
  "@taimos/cdk-construct-hosting",
  "@terrastack/core",
  "@umlss/aws-cdk-serverless-timer",
  "aws-cdk-dynamodb-seeder",
  "aws-cdk-featureflags",
  "aws-cdk-image-resize",
  "aws-lambda-golang",
  "cdk-alps-graph-ql",
  "cdk-athena-workgroup",
  "cdk-cicd",
  "cdk-cloudfront-deploy",
  "cdk-constants",
  "cdk-elasticache-monitor",
  "cdk-github-import",
  "cdk-iam-constants",
  "cdk-iam-generator",
  "cdk-image-builder-patterns",
  "cdk-libs",
  "cdk-mediapackage-custom",
  "cdk-noob",
  "cdk-secrets",
  "cdk-serverless-api",
  "cdk-sns-notify",
  "cdk-sqs-monitored",
  "cdk-stepfunctions-patterns",
  "cdk-time-bomb",
  "cdk-tweet-queue",
  "cdk-watchful-edge",
  "cdk-website",
  "cdk8s-aws-alb-ingress-controller",
  "cdk8s-op",
  "cdk8s-plus",
  "cicd-spa-website",
  "crossplane-cdk8s",
  "gradle_s3_uploader",
  "monocdk-experiment",
  "nodejsfunction-plus",
  "p82yf-libocr",
  "secure-bucket",
  "sqs-redrive",
  "sqs-redrive-construct",
]
`;
